# puzzlebot_ros

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml  github_action_test.py
docker/: docker-compose.yaml  fastdds_no_shm.xml
docker/main/: Dockerfile
docker/main_cuda/: Dockerfile  entrypoint.sh
isaac_sim/assets/puzzlebot/urdf/: puzzlebot.urdf
isaac_sim/assets/puzzlebot/urdf/puzzlebot/: puzzlebot.usd
isaac_sim/assets/puzzlebot/urdf/puzzlebot/configuration/: puzzlebot_base.usd  puzzlebot_physics.usd  puzzlebot_sensor.usd
isaac_sim/assets/puzzlebot/usd/: puzzlebot.usd  puzzlebot_v2.usd  puzzlebot_v3.usd  scene.txt
isaac_sim/puzzlebot_description/urdf/: puzzlebot.urdf
isaac_sim/simulation/: config.yaml  main.py
isaac_sim/simulation/generated_usd/: puzzlebot.usd
isaac_sim/simulation/generated_usd/configuration/: puzzlebot_physics.usd  puzzlebot_robot.usd
isaac_sim/simulation/helpers/: urdf_to_usd.py
isaac_sim/simulation/robot/: drive_controller.py
isaac_sim/simulation/ros2/: cmd_vel_bridge.py
isaac_sim/simulation/sim_utils/: math_utils.py
isaac_sim/simulation/simulation_std/: config.yaml  diagnose_nodes.py  main.py
isaac_sim/simulation/simulation_std/generated_usd/configuration/: puzzlebot_base.usd  puzzlebot_physics.usd  puzzlebot_sensor.usd
isaac_sim/simulation/simulation_std/helpers/: puzzlebot.py
isaac_sim/worlds/: puzz_scene.usd  puzz_scene_v2.usd  puzzlebot_scene_v2.usd  simple.usd  warehouse.usd  warehouse_f.usd  world.usd
jetson/: install.sh
src/: odom.py
src/puzzlebot_behavior/: CMakeLists.txt  package.xml
src/puzzlebot_behavior/bt_nodes/: dummy_nodes.hpp  enable_detections.hpp
src/puzzlebot_behavior/config/: config.yaml
src/puzzlebot_behavior/src/: bt_executor.cpp
src/puzzlebot_behavior/trees/: main_tree.xml
src/puzzlebot_bringup/: CMakeLists.txt  package.xml
src/puzzlebot_bringup/launch/: monte_carlo.launch.py  puzzlebot.launch.py  real_hardware.launch.py  real_hardware_debug.launch.py  sim_hardware_degub.launch.py
src/puzzlebot_control/: CMakeLists.txt  package.xml
src/puzzlebot_control/config/: fixed_apriltags.yaml  real_fixed.yaml
src/puzzlebot_control/include/puzzlebot_control/: kalman_filter.hpp  math_utils.hpp  pure_pursuit_controller.hpp
src/puzzlebot_control/launch/: control.launch.py
src/puzzlebot_control/src/: joint_state_pub.cpp  odometry.cpp  odometry_raw.cpp  pure_pursuit.cpp  pure_pursuit_node.cpp  sim_encoders.cpp  visual_servoing.cpp
src/puzzlebot_description/: CMakeLists.txt  package.xml
src/puzzlebot_description/launch/: display.launch.py
src/puzzlebot_description/meshes/: forks.stl  inner_mast.stl  outer_mast.stl
src/puzzlebot_description/rviz/: display.rviz  monte_carlo.rviz
src/puzzlebot_description/urdf/: macros.xacro  materials.xacro  parameters.xacro  puzzlebot.urdf.xacro
src/puzzlebot_inference/: package.xml  setup.cfg  setup.py
src/puzzlebot_inference/puzzlebot_inference/: image_saver.py  pallet_detection_cpu.py  pallet_detection_gpu.py  pallet_detection_sim.py
src/puzzlebot_inference_eng/: CMakeLists.txt  package.xml
src/puzzlebot_inference_eng/src/: pallet_detection_engine.cpp
src/puzzlebot_navigation/: CMakeLists.txt  package.xml
src/puzzlebot_navigation/include/puzzlebot_navigation/: kalman_filter.hpp
src/puzzlebot_navigation/src/: ekf_node.cpp  occupancy_grid.cpp
src/puzzlebot_vision/: CMakeLists.txt  package.xml
src/puzzlebot_vision/cfg/: camera_info.yaml  models.yaml  tags_36h11.yaml
src/puzzlebot_vision/include/: postprocess.hpp  tensor_rt_engine.hpp
src/puzzlebot_vision/launch/: vision.launch.py
src/puzzlebot_vision/src/: AprilTagNode.cpp  camera_info.cpp  camera_noise.cpp  conversion.cpp  frame_id_stamper.cpp  pallet_detection_engine.cpp  pose_estimation.cpp
test/: test_github_actions.py
